--- a/.gitignore
+++ b/.gitignore
@@ -9,8 +9,10 @@ lerna-debug.log*
 
 /frontend/node_modules
 /backend/node_modules
+/admin/node_modules
 /frontend/.env
 /backend/.env
+/admin/.env
 
 dist
 dist-ssr
